fix whitespace right mobile, vw sponsor images

--- a/css/original.css
+++ b/css/original.css
@@ -599,7 +599,7 @@ a:hover {
  }
 
  .partners img {
-   max-width: 350px;
+   max-width: 30vw;
  }
 
  #sponsors .invite {
